--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 # Value for $GITHUB_OAUTH_TOKEN is generated from https://github.com/settings/tokens
+# Value for $HEROKU_OAUTH_TOKEN is generated from https://dashboard.heroku.com/account
+
 # and added to travis https://travis-ci.org/anandchakru/rason/settings
 
 language: java
@@ -7,18 +9,33 @@ script:
 cache:
   directories:
     - $HOME/.m2
+branches:
+  except:
+  - test
+  - master
 notifications:
   email:
     on_failure: change
     on_success: change
 deploy:
-  provider: releases
-  api_key: $GITHUB_OAUTH_TOKEN
-  file_glob: true
-  file: 
-    - /home/travis/build/anandchakru/rason/target/rason-*.jar
-  on:
-    repo: anandchakru/rason
-    branch: master
-    tags: true
-  skip_cleanup: true
+  - provider: releases
+    api_key: $GITHUB_OAUTH_TOKEN
+    file_glob: true
+    file: 
+      - /home/travis/build/anandchakru/rason/target/rason-*.jar
+    on:
+      repo: anandchakru/rason
+      branch: master
+      tags: true
+    skip_cleanup: true
+  - provider: heroku
+    app: rason
+    api_key: $HEROKU_OAUTH_TOKEN
+    file_glob: true
+    file: 
+      - /home/travis/build/anandchakru/rason/target/rason-*.jar
+    on:
+      repo: anandchakru/rason
+      branch: master
+      tags: true
+    skip_cleanup: true
