--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@
 
 language: java
 script:
-- mvn package -Dmaven.javadoc.skip=true -B -V
+- mvn package -Drason.version=${TRAVIS_BUILD_NUMBER} -Dmaven.javadoc.skip=true -B -V
 cache:
   directories:
     - $HOME/.m2
