--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
 server:
   port: ${port:9090}
 rason: 
+  slugMaxLength: 50
   slugGenMaxRetry: 10
   maxCacheSize: 2000
   maxCacheLifeMinutes: 1440
