--- a/src/main/ng/package.json
+++ b/src/main/ng/package.json
@@ -27,7 +27,6 @@
     "bootstrap-scss": "^4.1.3",
     "cookieconsent": "^3.1.0",
     "core-js": "^2.5.4",
-    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ng2-ace-editor": "^0.3.8",
     "ngx-cookieconsent": "^2.0.0",
@@ -41,6 +40,7 @@
     "@angular/cli": "~7.1.0",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
