--- a/src/main/ng/package.json
+++ b/src/main/ng/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ng",
-  "version": "0.0.0",
+  "version": "1.0.11",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "v": "node src/version.js",
     "s": "npm run v && ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "build": "npm version patch && ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
