--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@
 
 language: java
 script:
-- mvn package -Drason.version=${TRAVIS_BUILD_NUMBER} -Dmaven.javadoc.skip=true -B -V
+- mvn package -Drason.version=${TRAVIS_TAG} -Dmaven.javadoc.skip=true -B -V
 cache:
   directories:
     - $HOME/.m2
@@ -30,7 +30,7 @@ deploy:
     api_key: $GITHUB_OAUTH_TOKEN
     file_glob: true
     file: 
-      - /home/travis/build/anandchakru/rason/target/rason-*.jar
+      - /home/travis/build/anandchakru/rason/target/rason-${TRAVIS_TAG}.jar
     on:
       repo: anandchakru/rason
       branch: master
@@ -41,7 +41,7 @@ deploy:
     api_key: $HEROKU_OAUTH_TOKEN
     file_glob: true
     file: 
-      - /home/travis/build/anandchakru/rason/target/rason-*.jar
+      - /home/travis/build/anandchakru/rason/target/rason-${TRAVIS_TAG}.jar
     on:
       repo: anandchakru/rason
       branch: master
