skip default mvn install in travis
https://stackoverflow.com/a/39689441/234110

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@
 
 
 language: java
+install: 
+- mvn dependency:resolve
 script:
 - mvn package -Drason.version=${TRAVIS_TAG} -Dmaven.javadoc.skip=true -B -V
 cache:
