public dir cleanup & travis cache node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ Thumbs.db
 
 
 #
+src/main/resources/public/
 src/ng/src/environments/version.ts
 src/main/ng/src/environments/version\.ts
 src/main/ng/node/
