replace sessions with buckets
travis - only if tag present
gtag.sh - default initial version to 1.0.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@
 
 # FYI: Value for $TRAVIS_BUILD_DIR is /home/travis/build/anandchakru/rason
 
+jobs:
+  include:
+    if: tag IS present
 language: java
 install: 
 - mvn dependency:resolve
